# PRosBSD

./: .clang-format  .gitignore  CMakeLists.txt  Dockerfile  Makefile  build.sh  grub.cfg  license  misc.sh  readme.md  reqs.txt  todo.md  toolchain-i686-elf.cmake
boot/: MBR.asm  Makefile  kernel.asm  setup.asm
cfg/: BOLD.FNT  Makefile.header  config.cmake  configurator.c  grub.cfg  linker.ld  syslinux.cfg
drivers/: Makefile
include/: cmos.h  console.h  ctype.h  extrns.h  io.h  keyboard.h  (+10 more)
kernel/: CMakeLists.txt  Makefile  console.c  ctype.c  idt.c  idt_stub.asm  irq.c  isr.c  panic.c  pic.c  printf.c  stdlib.c  string.c
kernel/arch/: CMakeLists.txt
kernel/arch/i386/: CMakeLists.txt
kernel/arch/i386/boot/: CMakeLists.txt
kernel/arch/i386/boot/src/: setup.S
kernel/arch/i386/image/: CMakeLists.txt  syslinux.cfg
kernel/arch/i386/image/src/: kernel_entry.S
kernel/arch/i386/libarch/: CMakeLists.txt
kernel/arch/i386/libarch/include/libarch/: bits.h
kernel/arch/i386/libarch/src/: io_mgr.c
kernel/arch/include/arch/: bits.h  io_mgr.h
kernel/boot/: CMakeLists.txt  FONT.FNT  MBR.asm  MBR.s  Makefile  setup.asm  setup.s
kernel/core/: CMakeLists.txt  panic.c
kernel/core/include/: timer.h
kernel/core/include/cpu/: io.h
kernel/core/include/drivers/: cmos.h  pata_pio.h  pit.h  vga_tty.h
kernel/core/include/drivers/gpu/: clgd64xx.h
kernel/core/include/fs/: fat32.h
kernel/core/include/shell/: clear.h
kernel/core/src/: init.c  main.c  panic.c  timer.c
kernel/core/src/drivers/: cmos.c  keyboard.c  mouse.c  pata_pio.c  pit.c  vga_tty.c
kernel/core/src/drivers/gpu/unique/cirrus/: clgd54xx.c
kernel/core/src/init/: main.c
kernel/core/src/interrupts/: idt.c  irq.c  isr.c  pic.c
kernel/core/src/memory/: map.c  pfa.c
kernel/core/src/memory/virtual/: paging.c
kernel/core/src/shell/: clear.c  shell.c
kernel/cpu/: gdt.asm
kernel/drivers/cmos/: cmos.c
kernel/drivers/gpu/unique/cirrus/: clgd54xx.c
kernel/drivers/keyboard/: keyboard.c
kernel/drivers/mouse/: mouse.c
kernel/drivers/pata_pio/: pata_pio.c
kernel/drivers/pci/: pci.c  pci_io.c  pci_msi.c
kernel/drivers/pic/: pic.c
kernel/drivers/pit/: pit.c
kernel/drivers/vga_tty/: tty.c
kernel/fs/FATs/FAT32/: fat32.c
kernel/include/core/: panic.h
kernel/include/drivers/: keyboard.h  pci.h  pci_defs.h  tty.h
kernel/include/drivers/gpu/: clgd64xx.h
kernel/include/fs/: fat32.h  mbr.h
kernel/include/interrupts/: idt.h
kernel/include/memory/: map.h  pfa.h
kernel/include/memory/map/: e820.h
kernel/include/memory/virtual/: layout.h  paging.h
kernel/include/shell/: shell.h
kernel/include/util/: io.h
kernel/init/: main.c
kernel/interrupts/: idt.c  idt_stub.S  idt_stub.asm  irq.c  isr.c  pic.c
kernel/libk/: CMakeLists.txt  printf.c  stdio.c  string.c
kernel/libk/include/: ctype.h  stdarg.h  stdbool.h  stddef.h  stdint.h  stdio.h  stdlib.h  string.h
kernel/libk/src/: ctype.c  stdio.c  stdlib.c  string.c
kernel/libk/src/stdio/: printf.c
kernel/libk/src/stdlib/: malloc.c  mallocl.c
kernel/libk/stdio/: printf.c
kernel/libk/stdlib/: malloc.c  mallocl.c
kernel/memory/: malloc.c  mallocl.c  map.c  pfa.c
kernel/memory/map/: e820.c
kernel/memory/virtual/: paging.c
kernel/shell/: shell.c
kernel/timer/: timer.c
(+19 files in other folders)
